# reflow

./: .gitignore  readme.md
.github/workflows/: check-pcb-drc.yml
ci/: FAULTY  README.md  main.py  pyproject.toml
ci/github/: CODEOWNERS  PopulateDeps.py  PublishLog.py
ci/intents/: DesignRules.py  FileOwnership.py  FilePathValidity.py  FileTypes.py  intent.py
ci/tasks/: GenerateGerbers.py  UploadToKiCanvas.py  task.py
ci/util/: AssembleOutputLog.py
pcb/citali/: README.md  citali.kicad_pcb  citali.kicad_pro  citali.kicad_sch  ~citali.kicad_pcb.lck
