[project]
name = "reflow-ci"
version = "0.1.0"
description = "Checks for Reflow's Continuous Integration and Automated Submission Review"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "githubkit>=0.12.16",
    "pyrefly>=0.23.0",
    "requests>=2.32.3",
    "ruff>=0.11.13",
    "ty>=0.0.1a13",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*']
